--- a/MinesweeperWPF/LoginWindow.xaml
+++ b/MinesweeperWPF/LoginWindow.xaml
@@ -8,7 +8,7 @@
         Title="LoginWindow" Height="450" Width="740"
         ResizeMode="NoResize"
         Background="LightGray">
-    <Grid>
+    <Grid FocusManager.FocusedElement="{Binding ElementName=textBoxUsername}">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
