--- a/MinesweeperWPF/MainWindow.xaml
+++ b/MinesweeperWPF/MainWindow.xaml
@@ -10,14 +10,14 @@
         Background="DarkGray">
 
     <Window.Resources>
-        <Image Source="Assets/flag.gif" x:Key="img_flag"></Image>
-        <Image Source="Assets/badflag.gif" x:Key="img_badflag"></Image>
-        <Image Source="Assets/goodflag.gif" x:Key="img_goodflag"></Image>
+        <Image Source="Assets/flag.gif" x:Key="flag"></Image>
+        <Image Source="Assets/badflag.png" x:Key="badflag"></Image>
+        <Image Source="Assets/goodflag.png" x:Key="goodflag"></Image>
         <Image Source="Assets/mine.gif" x:Key="img_mine"></Image>
-        <Image Source="Assets/gameover-emoji.png" x:Key="img_gameover_emoji"></Image>
-        <Image Source="Assets/mineclicked-emoji.png" x:Key="img_mineclicked_emoji"></Image>
-        <Image Source="Assets/mineopening-emoji.png" x:Key="img_mineopening_emoji"></Image>
-        <Image Source="Assets/neutral-emoji.png" x:Key="img_neutral_emoji"></Image>
+        <Image Source="Assets/gameover-emoji.png" x:Key="gameover_emoji"></Image>
+        <Image Source="Assets/mineclicked-emoji.png" x:Key="mineclicked_emoji"></Image>
+        <Image Source="Assets/mineopening-emoji.png" x:Key="mineopening_emoji"></Image>
+        <Image Source="Assets/neutral-emoji.png" x:Key="neutral_emoji"></Image>
         <Image Source="Assets/explosion.gif" x:Key="img_explosion"></Image>
     </Window.Resources>
 
@@ -61,7 +61,7 @@
                 Grid.Column="1"
                 Height="50"
                 Width="100"
-                Content="{StaticResource img_flag}"
+                Content="{StaticResource flag}"
             />
 
             <Button
@@ -71,9 +71,10 @@
                 Width="60"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                Content="{StaticResource img_neutral_emoji}"
+                Content="{StaticResource neutral_emoji}"
                 Click="buttonReset_Click"
-            />
+            >
+            </Button>
 
         </Grid>
 
