--- a/MinesweeperWPF/MainWindow.xaml
+++ b/MinesweeperWPF/MainWindow.xaml
@@ -51,7 +51,17 @@
                 FontSize="36"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                FontFamily="Consolas"
+                FontFamily="Consolas" Margin="-70,0,0,0"
+            />
+            
+            <Image 
+                Name="remainingMinesImage"
+                Grid.Column="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Margin="50,0,0,0"  
+                Source="Assets/goodflag.png"
+                MaxHeight="50"
             />
 
             <ToggleButton 
