--- a/MinesweeperWPF/LoginWindow.xaml
+++ b/MinesweeperWPF/LoginWindow.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
         <Image HorizontalAlignment="Center" Height="150" VerticalAlignment="Center" Width="400" Source="Assets/minesweeper-logo.png" Grid.ColumnSpan="3" Grid.Row="0"/>
         <Label Content="Name:" FontSize="16" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="0 30 0 0" />
-        <TextBox Name="textBoxUsername" Margin="0, 80, 0, 0" Grid.ColumnSpan="3" HorizontalAlignment="Center" Height="30" Grid.Row="1" FontSize="16" VerticalAlignment="Top" Width="306"/>
+        <TextBox Background="Transparent" Name="textBoxUsername" Margin="0, 80, 0, 0" Grid.ColumnSpan="3" HorizontalAlignment="Center" Height="30" Grid.Row="1" FontSize="16" VerticalAlignment="Top" Width="306"/>
 
         <RadioButton Name="easyRb" Content="Easy&#x0a;(10x10, 30 mines)" FontSize="16" Grid.ColumnSpan="3" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Margin="180,0"/>
         <RadioButton Name="mediumRb" Content="Medium&#x0a;(12x12, 45 mines)" FontSize="16" Grid.ColumnSpan="3" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
