attempting to fix GameOver animation

--- a/MinesweeperWPF/MainWindow.xaml
+++ b/MinesweeperWPF/MainWindow.xaml
@@ -32,21 +32,25 @@
 
         <Storyboard x:Key="GameOverStoryboard">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="buttonReset">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1.5"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="5.083"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="1.083"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="buttonReset">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="1.5"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="5.083"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="1.083"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="buttonReset">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="-15"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="-170.275"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="-2.5"/>
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="buttonReset">
-                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="15"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="269.651"/>
                 <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="2.5"/>
             </DoubleAnimationUsingKeyFrames>
+            <PointAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransformOrigin)" Storyboard.TargetName="buttonReset">
+                <EasingPointKeyFrame KeyTime="0:0:0.3" Value="0.505,0.57"/>
+                <EasingPointKeyFrame KeyTime="0:0:0.8" Value="0.5,0.5"/>
+            </PointAnimationUsingKeyFrames>
         </Storyboard>
 
     </Window.Resources>
@@ -106,6 +110,7 @@
             />
 
             <Button
+                Panel.ZIndex="2"
                 Name="buttonReset"
                 Grid.Column="2"
                 Height="60"
@@ -131,6 +136,7 @@
         <Grid Name="minesweeperGrid" 
               HorizontalAlignment="Center" 
               VerticalAlignment="Center"
+              Panel.ZIndex="1"
         >
         </Grid>
 
